--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-success btn-block" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
@@ -45,9 +45,9 @@
           />
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-4 bg-dark">
           <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
+          <div class="row bg-dark" id="mars-facts">
             <h4>Mars Facts</h4>
             {{ mars.facts | safe }}
           </div>
@@ -62,8 +62,8 @@
 
         {% for hemisphere in mars.hemispheres %}
         <div class="col-md-6">
-          <div class="thumbnail">
-            <img src="{{hemisphere.image | default('static/images/error.png', true)}}" alt="...">
+          <div class="text-center">
+            <img class="img-thumbnail rounded" src="{{hemisphere.image | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
